pamc/src/tests/sample_code/should_fail/type_check/labeledness_mismatch/labeled_type_unlabeled_args.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

type List(Item~_: Type) {
    .Nil(~Item: Type): List(:Item),
    .Cons(~Item: Type, ~car: Item, ~cdr: List(:Item)): List(:Item),
}

let right = List(Item: Nat);
let wrong = List(Nat);
